Added respones - Unit and Intergration tests - Basic CICD